thirdparty/libeusolver/src/LibEUSolver.h

typedef uint64_t u64;
typedef int64_t i64;
/* BitSet functions */
void* eus_bitset_construct(u64 size_of_universe, bool initial_value);
void eus_bitset_destroy(void* bitset_ptr);
bool eus_bitsets_equal(const void* bitset1, const void* bitset2);
bool eus_bitsets_not_equal(const void* bitset1, const void* bitset2);
bool eus_bitset_is_proper_subset(const void* bitset1, const void* bitset2);
bool eus_bitset_is_subset(const void* bitset1, const void* bitset2);
bool eus_bitset_is_proper_superset(const void* bitset1, const void* bitset2);
bool eus_bitset_is_superset(const void* bitset1, const void* bitset2);
void eus_bitset_set_bit(void* bitset, u64 bit_num);
void eus_bitset_clear_bit(void* bitset, u64 bit_num);
bool eus_bitset_flip_bit(void* bitset, u64 bit_num);
bool eus_bitset_test_bit(const void* bitset, u64 bit_num);
void eus_bitset_set_all(void* bitset);
void eus_bitset_clear_all(void* bitset);
void eus_bitset_flip_all(void* bitset);
u64 eus_bitset_get_size_of_universe(const void* bitset);
u64 eus_bitset_get_length(const void* bitset);
bool eus_bitset_is_full(const void* bitset);
bool eus_bitset_is_empty(const void* bitset);
void* eus_bitset_and_functional(const void* bitset1, const void* bitset2);
void* eus_bitset_or_functional(const void* bitset1, const void* bitset2);
void* eus_bitset_xor_functional(const void* bitset1, const void* bitset2);
void* eus_bitset_minus_functional(const void* bitset1, const void* bitset2);
void* eus_bitset_negate_functional(const void* bitset);
void eus_bitset_inplace_and(void* bitset1_and_result, const void* bitset2);
void eus_bitset_inplace_or(void* bitset1_and_result, const void* bitset2);
void eus_bitset_inplace_xor(void* bitset1_and_result, const void* bitset2);
void eus_bitset_inplace_minus(void* bitset1_and_result, const void* bitset2);
void eus_bitset_inplace_negate(void* bitset_and_result);
bool eus_bitsets_are_disjoint(const void* bitset1, const void* bitset2);
i64 eus_bitset_get_next_element_greater_than_or_equal_to(const void* bitset, u64 position);
i64 eus_bitset_get_next_element_greater_than(const void* bitset, u64 position);
i64 eus_bitset_get_prev_element_lesser_than_or_equal_to(const void* bitset, u64 position);
i64 eus_bitset_get_prev_element_lesser_than(const void* bitset, u64 position);
u64 eus_bitset_get_hash(const void* bitset);
const char* eus_bitset_to_string(const void* bitset);
void* eus_bitset_clone(const void* bitset);
void eus_bitset_copy_in(void* bitset1, const void* bitset2);
/* error handling */
bool eus_check_error();
const char* eus_get_last_error_string();
/* decision tree traversal */
bool eus_decision_tree_is_split_node(const void* node);
bool eus_decision_tree_is_leaf_node(const void* node);
void eus_decision_tree_inc_ref(const void* node);
void eus_decision_tree_dec_ref(const void* node);
const void* eus_decision_tree_get_positive_child(const void* node);
const void* eus_decision_tree_get_negative_child(const void* node);
u64 eus_decision_tree_get_split_attribute_id(const void* node);
u64 eus_decision_tree_get_label_id(const void* node);
const void* eus_decision_tree_get_all_label_ids(const void* node);
const char* eus_decision_tree_to_string(const void* node);
/* learning methods */
const void* eus_learn_decision_tree_for_ml_data(void** pred_signatures,
                                                void** term_signatures,
                                                u64 num_preds,
                                                u64 num_terms);