thirdparty/libeusolver/src/python/eusolver.py

#!/usr/bin/env python3
# eusolver.py ---
#
# Filename: eusolver.py
# Author: Abhishek Udupa
# Created: Mon Sep 21 16:03:49 2015 (-0400)
#
#
# Copyright (c) 2015, Abhishek Udupa, University of Pennsylvania
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 3. All advertising materials mentioning features or use of this software
#    must display the following acknowledgement:
#    This product includes software developed by The University of Pennsylvania
# 4. Neither the name of the University of Pennsylvania nor the
#    names of its contributors may be used to endorse or promote products
#    derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDER ''AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#
#

# Code:

import ctypes
import sys
import os
import signal

class LibEUSolverException(Exception):
    def __init__(self, error_msg):
        self.error_msg = error_msg

    def __str__(self):
        return 'LibEUSolverException: ' + self.error_msg

class BitSetObject(ctypes.c_void_p):
    def __init__(self, bitset_ptr):
        super().__init__(bitset_ptr)

class DecisionTreeNodeObject(ctypes.c_void_p):
    def __init__(self, decision_tree_node_ptr):
        super().__init__(decision_tree_node_ptr)

_loaded_lib = None
from sys import platform
def _lib():
    global _loaded_lib
    if (_loaded_lib == None):
        mydir = os.path.dirname(os.path.abspath(__file__))
        suffix = ".so" if platform == "linux" else ".dylib"
        lib_dir = os.path.join(mydir, 'libeusolver' + suffix)
        try:
            init(lib_dir)
            # also disable interception of SIGINT
            signal.signal(signal.SIGINT, signal.SIG_DFL)
        except Exception as e:
            print('Could not load libeusolver', suffix)
            raise e

    return _loaded_lib

def _to_ascii(s):
    if isinstance(s, str):
        return s.encode('ascii')
    else:
        return s

def _to_pystr(s):
    if sys.version < '3':
        return s
    else:
        return s.decode('utf-8')


def init(path_to_lib):
    global _loaded_lib
    _loaded_lib = ctypes.CDLL(path_to_lib)

    _loaded_lib.eus_bitset_construct.argtypes = [ctypes.c_ulong, ctypes.c_bool]
    _loaded_lib.eus_bitset_construct.restype = BitSetObject

    _loaded_lib.eus_bitset_destroy.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_destroy.restype = None

    _loaded_lib.eus_bitsets_equal.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitsets_equal.restype = ctypes.c_bool

    _loaded_lib.eus_bitsets_not_equal.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitsets_not_equal.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_is_proper_subset.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_is_proper_subset.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_is_subset.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_is_subset.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_is_proper_superset.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_is_proper_superset.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_is_superset.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_is_superset.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_set_bit.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_set_bit.restype = None

    _loaded_lib.eus_bitset_clear_bit.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_clear_bit.restype = None

    _loaded_lib.eus_bitset_flip_bit.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_flip_bit.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_test_bit.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_test_bit.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_set_all.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_set_all.restype = None

    _loaded_lib.eus_bitset_clear_all.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_clear_all.restype = None

    _loaded_lib.eus_bitset_flip_all.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_flip_all.restype = None

    _loaded_lib.eus_bitset_get_size_of_universe.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_get_size_of_universe.restype = ctypes.c_ulong

    _loaded_lib.eus_bitset_get_length.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_get_length.restype = ctypes.c_ulong

    _loaded_lib.eus_bitset_is_full.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_is_full.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_is_empty.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_is_empty.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_and_functional.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_and_functional.restype = BitSetObject

    _loaded_lib.eus_bitset_or_functional.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_or_functional.restype = BitSetObject

    _loaded_lib.eus_bitset_xor_functional.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_xor_functional.restype = BitSetObject

    _loaded_lib.eus_bitset_minus_functional.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_minus_functional.restype = BitSetObject

    _loaded_lib.eus_bitset_negate_functional.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_negate_functional.restype = BitSetObject

    _loaded_lib.eus_bitset_inplace_and.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_inplace_and.restype = None

    _loaded_lib.eus_bitset_inplace_or.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_inplace_or.restype = None

    _loaded_lib.eus_bitset_inplace_xor.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_inplace_xor.restype = None

    _loaded_lib.eus_bitset_inplace_minus.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_inplace_minus.restype = None

    _loaded_lib.eus_bitset_inplace_negate.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_inplace_negate.restype = None

    _loaded_lib.eus_bitsets_are_disjoint.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitsets_are_disjoint.restype = ctypes.c_bool

    _loaded_lib.eus_bitset_get_next_element_greater_than_or_equal_to.argtypes = [BitSetObject,
                                                                                 ctypes.c_ulong]
    _loaded_lib.eus_bitset_get_next_element_greater_than_or_equal_to.restype = ctypes.c_long

    _loaded_lib.eus_bitset_get_next_element_greater_than.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_get_next_element_greater_than.restype = ctypes.c_long

    _loaded_lib.eus_bitset_get_prev_element_lesser_than_or_equal_to.argtypes = [BitSetObject,
                                                                                ctypes.c_ulong]
    _loaded_lib.eus_bitset_get_prev_element_lesser_than_or_equal_to.restype = ctypes.c_long

    _loaded_lib.eus_bitset_get_prev_element_lesser_than.argtypes = [BitSetObject, ctypes.c_ulong]
    _loaded_lib.eus_bitset_get_prev_element_lesser_than.restype = ctypes.c_long

    _loaded_lib.eus_bitset_get_hash.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_get_hash.restype = ctypes.c_ulong

    _loaded_lib.eus_bitset_to_string.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_to_string.restype = ctypes.c_char_p

    _loaded_lib.eus_bitset_clone.argtypes = [BitSetObject]
    _loaded_lib.eus_bitset_clone.restype = BitSetObject

    _loaded_lib.eus_bitset_copy_in.argtypes = [BitSetObject, BitSetObject]
    _loaded_lib.eus_bitset_copy_in.restype = None

    _loaded_lib.eus_check_error.argtypes = []
    _loaded_lib.eus_check_error.restype = ctypes.c_bool

    _loaded_lib.eus_get_last_error_string.argtypes = []
    _loaded_lib.eus_get_last_error_string.restype = ctypes.c_char_p

    # decision tree traversal and ref counting
    _loaded_lib.eus_decision_tree_is_split_node.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_is_split_node.restype = ctypes.c_bool

    _loaded_lib.eus_decision_tree_is_leaf_node.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_is_leaf_node.restype = ctypes.c_bool

    _loaded_lib.eus_decision_tree_inc_ref.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_inc_ref.restype = None

    _loaded_lib.eus_decision_tree_dec_ref.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_dec_ref.restype = None

    _loaded_lib.eus_decision_tree_get_positive_child.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_get_positive_child.restype = DecisionTreeNodeObject

    _loaded_lib.eus_decision_tree_get_negative_child.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_get_negative_child.restype = DecisionTreeNodeObject

    _loaded_lib.eus_decision_tree_get_split_attribute_id.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_get_split_attribute_id.restype = ctypes.c_ulong

    _loaded_lib.eus_decision_tree_get_label_id.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_get_label_id.restype = ctypes.c_ulong

    _loaded_lib.eus_decision_tree_get_all_label_ids.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_get_all_label_ids.restype = BitSetObject

    _loaded_lib.eus_decision_tree_to_string.argtypes = [DecisionTreeNodeObject]
    _loaded_lib.eus_decision_tree_to_string.restype = ctypes.c_char_p

    _loaded_lib.eus_learn_decision_tree_for_ml_data.argtypes = [ctypes.POINTER(BitSetObject),
                                                                ctypes.POINTER(BitSetObject),
                                                                ctypes.c_ulong, ctypes.c_ulong]
    _loaded_lib.eus_learn_decision_tree_for_ml_data.restype = DecisionTreeNodeObject

def eus_check_error():
    return _lib().eus_check_error()

def eus_get_last_error_string():
    return _to_pystr(_lib().eus_get_last_error_string())

def _raise_exception_if_error():
    if (eus_check_error()):
        raise LibEUSolverException(eus_get_last_error_string())

def eus_bitset_construct(a0, a1 = False):
    r = _lib().eus_bitset_construct(a0, a1)
    _raise_exception_if_error()
    return r

def eus_bitset_destroy(a0):
    r = _lib().eus_bitset_destroy(a0)
    _raise_exception_if_error()
    return r

def eus_bitsets_equal(a0, a1):
    r = _lib().eus_bitsets_equal(a0, a1)
    _raise_exception_if_error()
    return r

def eus_bitsets_not_equal(a0, a1):
    r = _lib().eus_bitsets_not_equal(a0, a1)
    _raise_exception_if_error()
    return r

def eus_bitset_is_proper_subset(a0, a1):
    r = _lib().eus_bitset_is_proper_subset(a0, a1)
    _raise_exception_if_error()
    return r
